--- a/app/less/app/content/content.less
+++ b/app/less/app/content/content.less
@@ -1,7 +1,7 @@
 .il-content{
   .make-row();
   &:extend(.container-fluid);
-  padding-top: @il-header-height;
+  padding-top: @il-header-height-sm;
   min-height: calc(~"100%" -  @il-footer-height);
   height: auto;
   padding-left: 0;
@@ -12,4 +12,8 @@
   margin-right: 0;
   background: @il-content-bg-color;
   overflow: auto;
+
+  @media (min-width: @screen-sm-min) {
+    padding-top: @il-header-height;
+  }
 }
