--- a/app/less/app/header/headerMainMenu/headerMainMenu.less
+++ b/app/less/app/header/headerMainMenu/headerMainMenu.less
@@ -1,23 +1,35 @@
 .il-header-main-menu{
   position: absolute;
 
-  top: auto;
-  height: @il-header-main-menu-height;
-  bottom: @il-header-main-menu-bottom;
-  left: @il-header-main-menu-left;
-  right: @il-header-main-menu-right;
+  top: @il-header-main-menu-top-sm;
+  bottom: auto;
+  left: @il-header-main-menu-left-sm;
+  right: @il-header-main-menu-right-sm;
+
+
 
   .il-header-main-menu-content{
-    height: @il-header-main-menu-height;
     color: @il-header-main-menu-color;
     background: @il-header-main-menu-bg;
 
-    border: @il-header-main-menu-border;
-    border-radius: @il-header-main-menu-border-radius;
+    border: @il-header-main-menu-border-sm;
+    border-radius: @il-header-main-menu-border-radius-sm;
+
+    margin: 0;
   }
 
   .il-header-main-menu-entries{
-    float: @il-header-main-menu-float;
+    position: fixed;
+    top: @il-header-height-sm;
+    left: 0;
+    background: @il-header-main-menu-bg;
+    width: 100%;
+    padding-left: 0;
+    @media (min-width: @screen-sm-min) {
+      ul.nav{
+        float: @il-header-main-menu-float;
+      }
+    }
   }
 
   .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
@@ -28,5 +40,20 @@
   .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
     color: @il-header-main-menu-open-color;
     background: @il-header-main-menu-open-bg;
+  }
+
+  @media (min-width: @screen-sm-min) {
+    top: @il-header-main-menu-top;
+    left: @il-header-main-menu-left;
+    right: @il-header-main-menu-right;
+
+    .il-header-main-menu-content{
+      border: @il-header-main-menu-border;
+      border-radius: @il-header-main-menu-border-radius;
+    }
+    .il-header-main-menu-entries{
+      position: absolute;
+      top: 0;
+    }
   }
 }
