changes in tabs and sidebar

--- a/app/less/app/content/sidebars/blocks/blocks.less
+++ b/app/less/app/content/sidebars/blocks/blocks.less
@@ -111,6 +111,12 @@
   }
 }
 
+.il-sidebar-block-open{
+  .il-sidebar-block-heading{
+    background: red !important;
+  }
+  border-left: 4px solid #19aa8d !important;
+}
 @media (min-width: @screen-sm-min) {
   .il-sidebar-minified{
     .il-sidebar-block-group{
