--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -937,6 +937,8 @@
 @il-logo-color1: @brand-primary;
 @il-logo-color2: @brand-primary;
 
+@il-icons-size-lg: 45px;
+
 /********************************************************************************************/
 /*************************************** ILIAS Header **************************************/
 /********************************************************************************************/
@@ -1055,7 +1057,7 @@
 @il-sidebar-closed-xs: 0;
 @il-sidebar-closed-sm: 1;
 @il-sidebar-closed-md: 1;
-@il-sidebar-closed-lg: 3;
+@il-sidebar-closed-lg: 2;
 
 @il-sidebar-open-xs: 6;
 @il-sidebar-open-sm: 4;
@@ -1079,9 +1081,9 @@
 
 //== ILIAS Sidebar
 @il-sidebar-padding-bottom: 15px;
-@il-sidebar-bg-color:  @brand-primary;
-@il-sidebar-hover-bg-color:  darken(@brand-primary,10%);
-@il-sidebar-body-bg-color:  lighten(@brand-primary,10%);
+@il-sidebar-bg-color:  #2F4050;
+@il-sidebar-hover-bg-color:  darken(@il-sidebar-bg-color,3%);
+@il-sidebar-body-bg-color:  darken(@il-sidebar-bg-color,5%);
 @il-sidebar-heading-link-color: @navbar-inverse-color;
 @il-sidebar-heading-link-hover-color: @navbar-inverse-link-hover-color;
 @il-sidebar-padding-content: 50px;
