--- a/app/less/app/content/center/conter-center.less
+++ b/app/less/app/content/center/conter-center.less
@@ -7,8 +7,10 @@
   background: white;//@il-content-bg;
 
   padding-top: 15px;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  padding-left: 0;
+  padding-right:  0;
   margin: 0;
 }
 .il-content-center-full{
