--- a/app/less/app/content/sidebars/blocks/blockToggler.less
+++ b/app/less/app/content/sidebars/blocks/blockToggler.less
@@ -1,7 +1,7 @@
 //Buttons to toggle sidebars in and aout
 .il-sidebar-toggle-button{
   &:extend(.btn all);
-  &:extend(.btn-primary all);
+  &:extend(.btn-default all);
 
   position: absolute;
   padding: 0;
