Added file preview, code highlighiting, improved urls

--- a/app/data/collections/forms/fileUpload/fileUpload.less
+++ b/app/data/collections/forms/fileUpload/fileUpload.less
@@ -182,7 +182,7 @@ h3.ilFileUploadHeader {
   margin-top: -12px;
 }
 .ilFileDropTargetOverlayImage {
-  background: transparent url(images/drop_here.png) no-repeat center center;
+  background: transparent url(/app/static/img/services/forms/drop_here.png) no-repeat center center;
   width: 26px;
   height: 26px;
   padding-right: 3px;
