--- a/app/less/app/content/sidebars/blocks/blocks.less
+++ b/app/less/app/content/sidebars/blocks/blocks.less
@@ -111,11 +111,8 @@
   }
 }
 
-.il-sidebar-block-open{
-  .il-sidebar-block-heading{
-    background: red !important;
-  }
-  border-left: 4px solid #19aa8d !important;
+.il-sidebar-open .il-sidebar-block-open{
+  border-left: 4px solid #19aa8d;
 }
 @media (min-width: @screen-sm-min) {
   .il-sidebar-minified{
