Added DateTimePicker, TableFilter, Toolbar additions

--- a/app/less/app/content/sidebars/blocks/blocks.less
+++ b/app/less/app/content/sidebars/blocks/blocks.less
@@ -112,7 +112,7 @@
 }
 
 .il-sidebar-open .il-sidebar-block-open{
-  border-left: 4px solid #19aa8d;
+  border-left: @il-sidebar-block-active-border-width solid @il-sidebar-block-active-border-color;
 }
 @media (min-width: @screen-sm-min) {
   .il-sidebar-minified{
