--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -1103,7 +1103,9 @@
 @il-sidebar-padding-bottom: 15px;
 @il-sidebar-bg-color:  #2F4050;
 @il-sidebar-hover-bg-color:  darken(@il-sidebar-bg-color,3%);
-@il-sidebar-body-bg-color:  darken(@il-sidebar-bg-color,5%);
+@il-sidebar-body-bg-color:  lighten(@il-sidebar-bg-color,20%);
+@il-sidebar-block-active-border-width: 4px;
+@il-sidebar-block-active-border-color: darken(@il-sidebar-bg-color,10%);
 @il-sidebar-heading-link-color: @navbar-inverse-color;
 @il-sidebar-heading-link-hover-color: @navbar-inverse-link-hover-color;
 @il-sidebar-padding-content: 50px;
