renamed categories of variables

--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -930,7 +930,7 @@
 //== ILIAS Main
 //==Base ILIAS
 @il-background-images-path: "/app/static/img/";
-@il-page-bg: @navbar-inverse-bg;
+@il-content-bg: @navbar-inverse-bg;
 
 
 //== Icons
@@ -959,7 +959,7 @@
 
 
 /*************************************** Header Top Nav **************************************/
-//== Top Nav
+//== ILIAS Header Top Nav
 @il-header-top-nav-top: 0px;
 @il-header-top-nav-left: auto;
 @il-header-top-nav-right: @padding-base-horizontal;
@@ -976,7 +976,7 @@
 @il-header-top-nav-box-bg: lighten(@il-header-bg, 20%);
 @il-header-top-nav-box-hover-bg:lighten(@il-header-bg, 42%);
 
-//== Top Nav small
+//== ILIAS Header Top Nav small
 @il-header-top-nav-top-sm: 0;
 @il-header-top-nav-left-sm: 0;
 @il-header-top-nav-right-sm: @padding-base-horizontal;
@@ -987,7 +987,7 @@
 @il-header-top-nav-box-font-size-sm: 15px;
 
 /*************************************** Header Branding **************************************/
-//== Header Branding
+//== ILIAS Header Branding
 @il-header-branding-top: @padding-large-vertical;
 @il-header-branding-left: @padding-base-horizontal;
 @il-header-branding-right: 0;
@@ -1001,7 +1001,7 @@
 
 @il-header-branding-text-logo-padding: @padding-large-horizontal;
 
-//== Header Branding sm
+//== ILIAS Header Branding sm
 @il-header-branding-top-sm: @padding-small-vertical;
 @il-header-branding-left-sm: @padding-base-horizontal;
 @il-header-branding-right-sm: 0;
@@ -1016,7 +1016,7 @@
 @il-header-branding-text-display-sm: none;
 
 /*************************************** Header Main Menu **************************************/
-//== Header Main Menu
+//== ILIAS Header Main Menu
 @il-header-main-border-width: 1px;
 
 @il-header-main-menu-top: @il-header-height - @navbar-height - @il-header-border-vertical - 2 * @il-header-main-border-width;
@@ -1037,7 +1037,7 @@
 @il-header-main-menu-border: @il-header-main-border-width solid darken(@il-header-main-menu-bg, 10%);
 @il-header-main-menu-border-radius: 0;//@border-radius-base;
 
-//== Header Main Menu sm
+//== ILIAS Header Main Menu sm
 @il-header-main-menu-border-sm: 0px;
 @il-header-main-menu-border-width-sm: 0;
 
@@ -1156,6 +1156,8 @@
 @image-path:				"@{il-background-images-path}services/explorer/";
 @base-height:				@input-height-base;
 
+
+@il-btn-default-color: white;
 /*************************************** ILIAS Footer **************************************/
 //== ILIAS Footer
 @il-footer-bg: @navbar-inverse-bg;
