fixed path of less files

--- a/app/less/app/content/sidebars/blocks/explorer/js-tree-import.less
+++ b/app/less/app/content/sidebars/blocks/explorer/js-tree-import.less
@@ -1,4 +1,4 @@
-@treebase: "../../../libs/jstree/src/themes/";
+@treebase: "/libs/jstree/src/themes/";
 
 @import "@{treebase}mixins.less";
 @import "@{treebase}base.less";
