--- a/app/less/app/content/center/title/title.less
+++ b/app/less/app/content/center/title/title.less
@@ -6,7 +6,7 @@
     height: @il-icons-size-lg;
   }
   .il-content-title-section-properties{
-    float: left;
+    padding-left: @il-icons-size-lg;
   }
 
   .il-content-title-section-title{
