--- a/app/less/app/content/sidebars/blocks/blocks.less
+++ b/app/less/app/content/sidebars/blocks/blocks.less
@@ -81,6 +81,8 @@
         }
         .il-sidebar-block-heading-text{
           left: @il-flap-icon-font-size-lg + 2*@padding-large-horizontal;
+          top:auto;
+          bottom: auto;
         }
       }
     }
