--- a/app/data/layouts/mainStructure/header/iliasHeaderMainMenu.less
+++ b/app/data/layouts/mainStructure/header/iliasHeaderMainMenu.less
@@ -10,7 +10,7 @@
 
   .il-header-main-menu-content{
     color: @il-header-main-menu-color;
-    background: @il-header-main-menu-bg;
+    background: transparent;
 
     border: @il-header-main-menu-border-sm;
     border-radius: @il-header-main-menu-border-radius-sm;
