Import variable outcomented

--- a/app/less/bootstrap-import.less
+++ b/app/less/bootstrap-import.less
@@ -1,7 +1,7 @@
 @bsbase: "/libs/bootstrap/less/";
 
 // Core variables and mixins
-@import "@{bsbase}variables.less";    // original
+//@import "@{bsbase}variables.less";    // original
 @import "@{bsbase}mixins.less";
 
 // Reset and dependencies
