--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -3,7 +3,7 @@
 // --------------------------------------------------
 
 // --------------------------------------------------
-// Base Variables
+// -- Base Variables
 // --------------------------------------------------
 
 //== Colors
@@ -129,7 +129,7 @@
 @caret-width-large:         5px;
 
 // --------------------------------------------------
-// Elements Variables
+// -- Elements Variables
 // --------------------------------------------------
 
 //== Grid system
@@ -242,7 +242,7 @@
 
 
 // --------------------------------------------------
-// Collections Variables
+// -- Collections Variables
 // --------------------------------------------------
 
 //== Navigation
@@ -383,7 +383,6 @@
 //** `<input>` border color
 @input-border:                   #ccc;
 
-// TODO: Rename `@input-border-radius` to `@input-border-radius-base` in v4
 //** Default `.form-control` border radius
 // This has no effect on `<select>`s in some browsers, due to the limited stylability of `<select>`s in CSS.
 @input-border-radius:            @border-radius-base;
