--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -3,7 +3,7 @@
 // --------------------------------------------------
 
 // --------------------------------------------------
-// -- Base Variables
+// -- Base
 // --------------------------------------------------
 
 //== Colors
@@ -129,7 +129,7 @@
 @caret-width-large:         5px;
 
 // --------------------------------------------------
-// -- Elements Variables
+// -- Elements
 // --------------------------------------------------
 
 //== Grid system
@@ -242,7 +242,7 @@
 
 
 // --------------------------------------------------
-// -- Collections Variables
+// -- Collections
 // --------------------------------------------------
 
 //== Navigation
