--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -1135,4 +1135,4 @@
 @il-footer-color: @navbar-inverse-color;
 @il-footer-height: 45px;
 @il-footer-padding-horizontal: @navbar-padding-horizontal;
-@il-footer-padding-vertical: @navbar-padding-vertical;
+@il-footer-padding-vertical: @navbar-padding-vertical + @navbar-padding-horizontal;
