--- a/app/less/services/buttons.less
+++ b/app/less/services/buttons.less
@@ -1,5 +1,4 @@
-/* Services/UIComponent/Button */
-
+/* Services/UIComponent/Button
 .btn {
   font-size: @ilButtonFontSize;
 }
@@ -33,4 +32,4 @@ button.btn:not(.btn-link) > span:first-child:not(:empty) {
     text-decoration: none;
     background-color: transparent;
   }
-}
+}*/
